# letf-lab

./: .dockerignore  .env.docker.example  .gitignore  AI-Swing redesign.html  CLAUDE-DESIGN-PROMPT.md  Dockerfile  EXPORT-FROM-DESIGN-PROMPT.md  Makefile  README.md  SETUP.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/ai_swing/: __init__.py  config.py  main.py  scheduler.py
backend/ai_swing/auth/: __init__.py  security.py
backend/ai_swing/backtest/: __init__.py  cache.py  cohorts.py  crisis.py  engine.py  metrics.py  rolling_stress.py  tax_layer.py  walk_forward.py
backend/ai_swing/data/: __init__.py  cache.py  price_service.py  yfinance_loader.py
backend/ai_swing/db/: __init__.py  base.py  models.py
backend/ai_swing/indicators/: __init__.py  catalog.py  evaluator.py  functions.py
backend/ai_swing/routers/: auth.py  backtest.py  chat.py  compare.py  indicators.py  (+5 more)
backend/alembic/: env.py
backend/prompts/: portfolio_chat.system.md  portfolio_chat.user.txt  strategy_report.system.md  strategy_report.user.txt  weekly_digest.system.md  weekly_digest.user.txt
backend/scripts/: refresh_gates.py  seed.py
backend/tests/: conftest.py  test_ai_chat.py  test_ai_cli.py  test_backtest_engine.py  test_backtest_metrics.py  test_cohorts.py  test_compare.py  test_crisis_attribution.py  test_deploy_score.py  test_dsr.py  test_evaluator.py  test_gates.py  test_gates_service.py  test_indicators.py  test_refresh_service.py  test_rolling_stress.py  test_routers.py  test_tax_layer.py  test_walk_forward.py  test_weekly_digest.py
(+213 files in other folders)
