[project]
name = "ai-swing"
version = "0.1.0"
description = "Personal ETF/LETF rotation monitor"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
    "yfinance>=0.2.40",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "python-dateutil>=2.9",
    "psycopg[binary]>=3.2",
    "passlib[bcrypt]>=1.7",
    "pyjwt>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ai_swing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]
